force-app/main/default/objects/custom_create135__c/custom_create135__c.object-meta.xml
<CustomObject>
    <label>Custom created object135</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects135</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>