force-app/main/default/objects/custom_create135__c/fields/custom_create_135field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_135field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 135field539</label>
    <type>Checkbox</type>
</CustomField>